<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="707dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:strokeColor="@color/teal_700"
                app:strokeWidth="2dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/idTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20sp"
                        android:gravity="center"
                        android:text="@string/titleInput"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etNama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/idTitle"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:ems="19"
                        android:hint="@string/nama"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/etNohp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/etNama"
                        android:layout_marginStart="15sp"
                        android:ems="19"
                        android:hint="@string/no_hp"
                        android:inputType="number"
                        android:minHeight="48dp"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/etNohp"
                        android:layout_marginStart="15sp"
                        android:ems="19"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvprodi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/etEmail"
                        android:layout_marginStart="15sp"
                        android:layout_marginTop="15sp"
                        android:text="@string/tvJK"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/rgJkel"
                        android:layout_width="360dp"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:layout_below="@+id/tvprodi">

                        <RadioButton
                            android:id="@+id/rbL"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15sp"
                            android:text="@string/laki_laki"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/rbP"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="80dp"
                            android:text="@string/perempuan"
                            android:textSize="16sp" />

                    </RadioGroup>

                    <TextView
                        android:id="@+id/bahasa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rgJkel"
                        android:layout_marginStart="15sp"
                        android:text="@string/tvBahasa"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TableLayout
                        android:id="@+id/tbLayout"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_below="@+id/bahasa">
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <CheckBox
                                android:id="@+id/cbBind"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15sp"
                                android:text="@string/bind"
                                android:textSize="16sp" />

                            <CheckBox
                                android:id="@+id/cbBing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15sp"
                                android:text="@string/bing"
                                android:textSize="16sp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <CheckBox
                                android:id="@+id/cbMandarin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15sp"
                                android:text="@string/mandarin"
                                android:textSize="16sp" />

                            <CheckBox
                                android:id="@+id/cbPranc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15sp"
                                android:text="@string/prancis"
                                android:textSize="16sp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <CheckBox
                                android:id="@+id/cbArab"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15sp"
                                android:text="@string/arab"
                                android:textSize="16sp" />

                            <CheckBox
                                android:id="@+id/cbRusia"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15sp"
                                android:text="@string/rusia"
                                android:textSize="16sp" />
                        </TableRow>
                    </TableLayout>


                    <TextView
                        android:id="@+id/kursus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tbLayout"
                        android:layout_marginStart="15sp"
                        android:text="@string/tvCourse"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_below="@+id/kursus"
                        android:entries="@array/course"/>

                    <EditText
                        android:id="@+id/etHarga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/spinner"
                        android:layout_marginTop="15sp"
                        android:layout_marginStart="15sp"
                        android:ems="19"
                        android:hint="@string/harga"
                        android:inputType="number"
                        android:minHeight="48dp"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/etDisk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/etHarga"
                        android:layout_marginStart="15sp"
                        android:ems="19"
                        android:hint="@string/diskon"
                        android:inputType="number"
                        android:minHeight="48dp"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/kirim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/etDisk"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/send" />


                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>